Bug 1315213 - Support reading microcode version from the registry when it is a REG_DWORD value (sometimes used for AMD CPUs). r=milan